package edu.fiuba.algo3.modelo.recursos;

public class Minerales extends Recursos {

    public Minerales(int unidades) {
        super(unidades);
    }

    /*
    public Minerales(int unidades) {
        super(unidades);
    }
*/
}
