@startuml
abstract Recurso{
-unidadesDisponibles:int
+Recursos(unidades)
+gastar(recursos)
+agregarUnidades(recurso:Recurso)
+restarUnidades(recurso:Recurso)
'+gastarUnidades(unidadesAConsumir:int)
-devolverCantidadUnidades():int
+{abstract}toData():ObjectNode

}

class Inventario{
-edificios:List
-unidades:List
-gasVespeno:GasVespeno
-mineral:Mineral
-suministro:Suministro

+Inventario(gasVespeno:GasVespeno,mineral:Mineral,suministro:Suministro)
+fueDerrotado():bool
+buscarEdificio(coordenada):Edificio
+buscarUnidad(coordenada):Unidad
-buscarIdDeUnidad(coordenada):int
-buscarIdDeEdificio(coordenada):int
+tieneEdificio(nombreEdificio:nombre):bool
+consumirLarva()
+agregarEdificio(edificio)
+agregarUnidad(unidad)
+eliminarUnidad(coordenada)
+eliminarEdificio(coordenada)
+agregarGasVespeno(gasVespeno:Recurso)
+agregarMineral(mineral:Recurso)
+agregarSuministro(suministro:Recurso)
+consumirSuministro(suministro:Recurso)
+restarSuministro(recursoRequerido)
+consumirGasVespeno(gasVespeno:Recurso)
+consumirMineral(mineral:Recurso)
+devolverGasVespeno(gasVespeno:Recurso)
+devolverMineral(mineral:Recurso)
+toData():ObjectNode
'+evolucionarUnidad(mapa,coordenada,unidad)
+actualizar()
}

class GasVespeno{
+GasVespeno(gasVespeno:int)
+toData():ObjectNode
}

class Minerales{

+Minerales(minerales:int)
+toData():ObjectNode
}
class Suministro{
-unidadesMaximas:int
+Suministro(suministros:int)
+agregarUnidades(recurso:Recurso)
+toData():ObjectNode
}





Recurso <|--Suministro
Recurso <|--Minerales
Recurso <|--GasVespeno



Inventario -down->Recurso
@enduml
